# redadair-agents-project

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
agents/fia_assistant_agent/: agent.py
agents/redadair_assistant_agent/: agent.py
agents/student_coordinator_agent/: agent.py  prompt.py
fia_assistant_agent/: prompt.py
src/: extract-test.py  main.py
src/agents/fia_assistant_agent/: prompt.py
src/agents/rag_agent/: agent.py  prompt.py
src/agents/redadair_assistant_agent/: prompt.py
student_coordinator_agent/: agent.py  prompt.py
